# smartrandom

./: LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
data/requirements/: requirements-dev.txt
smartrandom/: __init__.py  generators.py  random_master.py
tests/: test_random_data_generators.py
