[metadata]
name = smartrandom
version = attr: smartrandom.__version__
author = A.A. Suvorov
author_email = smartlegiondev@gmail.com
description = Random Data Generators. Allows you to generate random strings of a given length from letters, numbers and symbols, as well as randomize text. Helps generate passwords, service codes (for example, for sending via SMS), hashes and much more.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/smartrandom/
project_urls =
    Documentation = https://github.com/smartlegionlab/smartrandom/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/smartrandom/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    password generator
    code generator
    random generator
    random code generator
    random string generator
    random bytes generator
    text randomizer
    smartrandom
    smartlegionlab
    A.A Suvorov

[options]
package_dir =
packages = find:
python_requires = >= 3.6
include_package_data = true
zip_safe = false
install_requires =